[package]
name = "asteroidgame"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = {version = "0.20"}
specs-derive ={version = "0.4.1" }
rand = {version = "0.8.5"}


[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
features = ["ttf","image"]
